# moc3-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
moc3-data/: Cargo.toml
moc3-data/src/: display_info.rs  lib.rs  model.rs  motion.rs
moc3-example/: Cargo.toml
moc3-example/src/: main.rs
moc3-impressionism/: Cargo.toml
moc3-impressionism/src/: data.rs  lib.rs  main.rs  pendulum.rs  physics.rs
moc3-impressionism/src/data/: mod.rs  physics.rs
moc3-physicsview/: Cargo.toml
moc3-physicsview/src/: main.rs
moc3-rs/: Cargo.toml
moc3-rs/src/: data.rs  interpolate.rs  lib.rs  owned.rs  write.rs
moc3-rs/src/deformer/: rotation_deformer.rs  warp_deformer.rs
moc3-rs/src/math/: lerp.rs  mod.rs
moc3-rs/src/puppet/: applicator.rs  collect.rs  draw_order.rs  mod.rs  node.rs
moc3-wgpu/: Cargo.toml
moc3-wgpu/src/: camera.rs  renderer.rs
moc3-wgpu/src/renderer/: mod.rs
moc3-wgpu/src/renderer/shader/: frag.wgsl  vert.wgsl
moc3-wgpu/src/shader/: frag.wgsl  mask.frag.wgsl  vert.wgsl
src/: main.rs
src/deformer/: glue.rs  mod.rs  rotation_deformer.rs
src/puppet/: mod.rs
src/renderer/: wgpu.rs
