[package]
name = "moc3-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.11.1"
bytemuck = { version = "1.13.1", features = ["extern_crate_alloc", "derive"] }
glam = { version = "0.23.0", features = ["bytemuck"] }
image = "0.24.7"
indextree = "4.6.0"
modular-bitfield = "0.11.2"
pollster = "0.3.0"
serde = { version = "1.0.152", features = ["derive"] }
wgpu = "0.17.0"
winit = "0.28.6"
