[workspace]
members = [
    "moc3-example",
    "moc3-impressionism",
    "moc3-physicsview",
    "moc3-rs",
    "moc3-wgpu",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bytemuck = "1.25.0"
glam = "0.33.0"
image = "0.25.6"
serde_json = "1"
wgpu = "29.0.3"
windows = "=0.62.2"
winit = "0.30.13"

[profile.dev.package.image]
opt-level = 3
