[package]
name = "moc3-example"
version = "0.1.0"
edition = "2021"

[dependencies]
binrw = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
moc3-rs = { path = "../moc3-rs" }
moc3-wgpu = { path = "../moc3-wgpu" }
pollster = "0.4.0"
rand = "0.9.2"
wgpu = { workspace = true }
winit = { workspace = true }
