[package]
name = "moc3-example"
version.workspace = true
edition.workspace = true

[dependencies]
glam = { workspace = true }
image = { workspace = true }
moc3-data = { path = "../moc3-data" }
moc3-impressionism = { path = "../moc3-impressionism" }
moc3-rs = { path = "../moc3-rs" }
moc3-wgpu = { path = "../moc3-wgpu" }
pollster = "0.4.0"
rand = "0.9.2"
serde_json = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
