[package]
name = "moc3-physicsview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.32.1"
glam = { workspace = true }
moc3-rs = { path = "../moc3-rs" }
moc3-impressionism = { path = "../moc3-impressionism" }
wgpu = { workspace = true }
winit = { workspace = true }
