[package]
name = "moc3-physicsview"
version.workspace = true
edition.workspace = true

[dependencies]
eframe = "0.34.3"
glam = { workspace = true }
moc3-data = { path = "../moc3-data" }
moc3-rs = { path = "../moc3-rs" }
moc3-impressionism = { path = "../moc3-impressionism" }
wgpu = { workspace = true }
winit = { workspace = true }
