[package]
name = "moc3-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { workspace = true, features = ["extern_crate_alloc", "derive"] }
encase = { version = "0.11.2", features = ["glam"] }
glam = { workspace = true, features = ["bytemuck"] }
image = { workspace = true }
moc3-rs = { path = "../moc3-rs" }
wgpu = { workspace = true }
