[package]
name = "moc3-wgpu"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { workspace = true, features = ["extern_crate_alloc", "derive"] }
encase = { version = "0.12.0" }
glam = { workspace = true, features = ["bytemuck", "encase"] }
image = { workspace = true }
moc3-rs = { path = "../moc3-rs" }
wgpu = { workspace = true }
